# easyecs

./: .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  Taskfile.yml  ecs.yml  pyproject.main.toml  pyproject.toml
.github/workflows/: auto-tag.yml  check-new-version.yml  pre-commit.yml  python-dev-branch.yml  python-publish.yml  python-test.yml
easyecs/: cli.py
easyecs/cloudformation/: client.py  fetch.py
easyecs/cloudformation/auto_destruction/: harakiri.py
easyecs/cloudformation/stack/: __init__.py  create.py  delete.py  update.py  waiter.py
easyecs/cloudformation/template/: __init__.py  task_definition.py  verify.py
easyecs/command/: __init__.py
easyecs/command/event/: synchronize_event_handler.py
easyecs/docker/: __init__.py
easyecs/helpers/: color.py  common.py  exceptions.py  loader.py  selector.py  settings.py  signal.py
easyecs/model/: ecs.py
tests/: README.md  test_cli.py  test_config_validation.py  test_template_generation.py
tests/cloudformation/template/: test_depends_on.py  test_efs.py  test_template_command.py
tests/docker/: test_docker_command.py
tests/model/: test_new_features.py  test_validation.py
