[tool.poetry]
name = "easyecs"
version = "0.10.1"
description = ""
authors = ["BONVARLET Benjamin <benjaminbonvarlet96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.6"
pyfzf = "^0.3.1"
boto3 = "^1.28.14"
aws-cdk-lib = "^2.89.0"
pyyaml = "^6.0.1"
pydantic = "^2.1.1"
watchdog = "^3.0.0"

[tool.poetry.scripts]
easyecs = "easyecs.cli:entrypoint"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
